sidux-irc (0.3.14) UNRELEASED; urgency=low

  * debian/sidux-irc.menu: depend on X11 for now.

 -- Kel Modderman <kel@otaku42.de>  Mon, 18 Jun 2007 23:08:20 +1000

sidux-irc (0.3.13) unstable; urgency=low

  * Add debian menu entry.
  * Fix for non-standard icon location.

 -- Kel Modderman <kel@otaku42.de>  Sun, 17 Jun 2007 11:25:19 +1000

sidux-irc (0.3.12) unstable; urgency=low

  * Purge .kde from /etc/skel.

 -- Kel Modderman <kel@otaku42.de>  Thu, 07 Jun 2007 11:54:41 +1000

sidux-irc (0.3.11) unstable; urgency=low

  * xchat Function fixed. 

 -- Andreas Weber <andreas@it-weber.com>  Sun, 27 May 2007 15:27:03 +0200

sidux-irc (0.3.10) unstable; urgency=low

  * Commandline for xchat fixed 

 -- Andreas Weber <andreas@it-weber.com>  Thu, 24 May 2007 20:14:50 +0200

sidux-irc (0.3.9) unstable; urgency=low

  * specify Categorie as sidux;Net, thanks to dedo for noticing.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 31 Mar 2007 21:45:45 +0200

sidux-irc (0.3.8) unstable; urgency=low

  [ Joaquim Boura ]
  * moving to xdg-menus

  [ Stefan Lippers-Hollmann ]
  * depend on sidux-xdg.
  * fix *.desktop location.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 31 Mar 2007 04:34:32 +0200

sidux-irc (0.3.7) unstable; urgency=low

  * kanotix-irc was never part of sidux or debian, don't conflict with it.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu,  1 Mar 2007 18:20:38 +0100

sidux-irc (0.3.6) unstable; urgency=low

  * introduce new sidux icons.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 22 Jan 2007 11:53:05 +0100

sidux-irc (0.3.5) unstable; urgency=low

  * fix last icon.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue,  2 Jan 2007 15:11:04 +0100

sidux-irc (0.3.4) unstable; urgency=low

  * sidux-irc.png, not kanotix.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon,  1 Jan 2007 23:49:42 +0100

sidux-irc (0.3.3) unstable; urgency=low

  [ Joaquim Boura ]
  * all user profile files go to /usr/share/user-profile/.

  [ Stefan Lippers-Hollmann ]