@@ -1,369 +1,0 @@
-#
-# WeeChat configuration file, created by WeeChat v0.1.6 on Sun Dec 18 12:59:16 2005
-# WARNING! Be careful when editing this file, WeeChat writes this file when exiting.
-#
-
-[look]
-look_set_title=on
-look_startup_logo=on
-look_startup_version=on
-look_weechat_slogan=the geekest IRC client!
-look_charset_decode_iso=ISO-8859-1
-look_charset_decode_utf=UTF-8
-look_charset_encode=UTF-8
-look_charset_internal=ISO-8859-1
-look_one_server_buffer=off
-look_buffer_timestamp=[%H:%M:%S]
-look_color_nicks=on
-look_color_nicks_number=10
-look_color_actions=on
-look_nicklist=on
-look_nicklist_position=right
-look_nicklist_min_size=0
-look_nicklist_max_size=0
-look_no_nickname=-cmd-
-look_nickmode=on
-look_nickmode_empty=off
-look_nick_completor=:
-look_nick_completion_ignore=[]-
-look_infobar=on
-look_infobar_timestamp=%A, %B %d %Y
-look_infobar_seconds=on
-look_infobar_delay_highlight=7
-look_hotlist_names_count=3
-look_hotlist_names_level=12
-look_hotlist_names_length=0
-look_day_change=on
-look_day_change_timestamp=%a, %d %b %Y
-
-[colors]
-col_real_white=off
-col_title=default
-col_title_bg=blue
-col_chat=default
-col_chat_time=default
-col_chat_time_sep=brown
-col_chat_prefix1=lightcyan
-col_chat_prefix2=white
-col_chat_server=brown
-col_chat_join=lightgreen
-col_chat_part=lightred
-col_chat_nick=lightcyan
-col_chat_host=cyan
-col_chat_channel=white
-col_chat_dark=green
-col_chat_highlight=yellow
-col_chat_bg=default
-col_status=default
-col_status_delimiters=cyan
-col_status_channel=white
-col_status_data_msg=yellow
-col_status_private=lightmagenta
-col_status_highlight=lightred
-col_status_data_other=default
-col_status_more=white
-col_status_bg=blue
-col_infobar=black
-col_infobar_delimiters=blue
-col_infobar_highlight=white
-col_infobar_bg=cyan
-col_input=default
-col_input_channel=white
-col_input_nick=lightgreen
-col_input_delimiters=cyan
-col_input_bg=default
-col_nick=default
-col_nick_away=cyan
-col_nick_chanowner=lightgreen
-col_nick_chanadmin=lightgreen
-col_nick_op=lightgreen
-col_nick_halfop=lightmagenta
-col_nick_voice=yellow
-col_nick_more=lightmagenta
-col_nick_sep=blue
-col_nick_self=white
-col_nick_color1=cyan
-col_nick_color2=magenta
-col_nick_color3=green
-col_nick_color4=brown
-col_nick_color5=lightblue
-col_nick_color6=default
-col_nick_color7=lightcyan
-col_nick_color8=lightmagenta
-col_nick_color9=lightgreen
-col_nick_color10=blue
-col_nick_private=default
-col_nick_bg=default
-col_chat_dcc_selected=white
-col_dcc_waiting=lightcyan
-col_dcc_connecting=yellow
-col_dcc_active=lightblue
-col_dcc_done=lightgreen
-col_dcc_failed=lightred
-col_dcc_aborted=lightred
-
-[history]
-history_max_lines=4096
-history_max_commands=100
-
-[log]
-log_auto_server=off
-log_auto_channel=off
-log_auto_private=off
-log_plugin_msg=off
-log_path=~/.weechat/logs/
-log_timestamp=%Y %b %d %H:%M:%S
-log_hide_nickserv_pwd=on
-
-[irc]
-irc_display_away=on
-irc_default_msg_away=away
-irc_default_msg_part=WeeChat %v
-irc_default_msg_quit=WeeChat %v
-irc_notice_as_pv=off
-irc_away_check=0
-irc_lag_check=60
-irc_lag_min_show=1
-irc_lag_disconnect=5
-irc_fifo_pipe=off
-irc_highlight=
-irc_colors_receive=on
-irc_colors_send=on
-
-[dcc]
-dcc_auto_accept_files=off
-dcc_auto_accept_chats=off
-dcc_timeout=300
-dcc_blocksize=65536
-dcc_port_range=
-dcc_own_ip=
-dcc_download_path=~
-dcc_upload_path=~
-dcc_convert_spaces=on
-dcc_auto_rename=on
-dcc_auto_resume=on
-
-[proxy]
-proxy_use=off
-proxy_type=http
-proxy_ipv6=off
-proxy_address=
-proxy_port=3128
-proxy_username=
-proxy_password=
-
-[plugins]
-plugins_path=~/.weechat/plugins
-plugins_autoload=*
-plugins_extension=.so
-
-[keys]
-ctrl-?=backspace
-meta-0=/buffer 10
-meta-1=/buffer 1
-meta-2=/buffer 2
-meta-3=/buffer 3
-meta-4=/buffer 4
-meta-5=/buffer 5
-meta-6=/buffer 6
-meta-7=/buffer 7
-meta-8=/buffer 8
-meta-9=/buffer 9
-meta2-15~=/buffer -1
-meta2-17~=/buffer +1
-meta2-18~=/window -1
-meta2-19~=/window +1
-meta2-1~=home
-meta2-21~=infobar_clear
-meta2-23~=nick_page_up
-meta2-24~=nick_page_down
-meta2-3~=delete
-meta2-4~=end
-meta2-5~=page_up
-meta2-6~=page_down
-meta2-7~=home
-meta2-8~=end
-meta2-A=up
-meta2-B=down
-meta2-C=right
-meta2-D=left
-meta2-F=end
-meta2-H=home
-meta-meta2-1~=nick_beginning
-meta-meta2-4~=nick_end
-meta-meta2-C=/buffer +1
-meta-meta2-D=/buffer -1
-meta-a=jump_smart
-meta-b=previous_word
-meta-d=delete_next_word
-meta-f=next_word
-meta-h=hotlist_clear
-meta-j01=/buffer 1
-meta-j02=/buffer 2
-meta-j03=/buffer 3
-meta-j04=/buffer 4
-meta-j05=/buffer 5
-meta-j06=/buffer 6
-meta-j07=/buffer 7
-meta-j08=/buffer 8
-meta-j09=/buffer 9
-meta-j10=/buffer 10
-meta-j11=/buffer 11
-meta-j12=/buffer 12
-meta-j13=/buffer 13
-meta-j14=/buffer 14
-meta-j15=/buffer 15
-meta-j16=/buffer 16
-meta-j17=/buffer 17
-meta-j18=/buffer 18
-meta-j19=/buffer 19
-meta-j20=/buffer 20
-meta-j21=/buffer 21
-meta-j22=/buffer 22
-meta-j23=/buffer 23
-meta-j24=/buffer 24
-meta-j25=/buffer 25
-meta-j26=/buffer 26
-meta-j27=/buffer 27
-meta-j28=/buffer 28
-meta-j29=/buffer 29
-meta-j30=/buffer 30
-meta-j31=/buffer 31
-meta-j32=/buffer 32
-meta-j33=/buffer 33
-meta-j34=/buffer 34
-meta-j35=/buffer 35
-meta-j36=/buffer 36
-meta-j37=/buffer 37
-meta-j38=/buffer 38
-meta-j39=/buffer 39
-meta-j40=/buffer 40
-meta-j41=/buffer 41
-meta-j42=/buffer 42
-meta-j43=/buffer 43
-meta-j44=/buffer 44
-meta-j45=/buffer 45
-meta-j46=/buffer 46
-meta-j47=/buffer 47
-meta-j48=/buffer 48
-meta-j49=/buffer 49
-meta-j50=/buffer 50
-meta-j51=/buffer 51
-meta-j52=/buffer 52
-meta-j53=/buffer 53
-meta-j54=/buffer 54
-meta-j55=/buffer 55
-meta-j56=/buffer 56
-meta-j57=/buffer 57
-meta-j58=/buffer 58
-meta-j59=/buffer 59
-meta-j60=/buffer 60
-meta-j61=/buffer 61
-meta-j62=/buffer 62
-meta-j63=/buffer 63
-meta-j64=/buffer 64
-meta-j65=/buffer 65
-meta-j66=/buffer 66
-meta-j67=/buffer 67
-meta-j68=/buffer 68
-meta-j69=/buffer 69
-meta-j70=/buffer 70
-meta-j71=/buffer 71
-meta-j72=/buffer 72
-meta-j73=/buffer 73
-meta-j74=/buffer 74
-meta-j75=/buffer 75
-meta-j76=/buffer 76
-meta-j77=/buffer 77
-meta-j78=/buffer 78
-meta-j79=/buffer 79
-meta-j80=/buffer 80
-meta-j81=/buffer 81
-meta-j82=/buffer 82
-meta-j83=/buffer 83
-meta-j84=/buffer 84
-meta-j85=/buffer 85
-meta-j86=/buffer 86
-meta-j87=/buffer 87
-meta-j88=/buffer 88
-meta-j89=/buffer 89
-meta-j90=/buffer 90
-meta-j91=/buffer 91
-meta-j92=/buffer 92
-meta-j93=/buffer 93
-meta-j94=/buffer 94
-meta-j95=/buffer 95
-meta-j96=/buffer 96
-meta-j97=/buffer 97
-meta-j98=/buffer 98
-meta-j99=/buffer 99
-meta-jmeta-d=jump_dcc
-meta-jmeta-l=jump_last_buffer
-meta-jmeta-s=jump_server
-meta-jmeta-x=jump_next_server
-meta-k=grab_key
-meta-Oa=up_global
-meta-Ob=down_global
-meta-Oc=next_word
-meta-Od=previous_word
-meta-r=delete_line
-meta-s=switch_server
-ctrl-A=home
-ctrl-E=end
-ctrl-H=backspace
-ctrl-I=tab
-ctrl-J=return
-ctrl-K=delete_end_line
-ctrl-L=refresh
-ctrl-M=return
-ctrl-T=transpose_chars
-ctrl-U=delete_beginning_line
-ctrl-W=delete_previous_word
-ctrl-Y=clipboard_paste
-
-[alias]
-BYE=quit
-C=clear
-CHAT=dcc chat
-CL=clear
-CLOSE=buffer close
-EXIT=quit
-J=join
-K=kick
-KB=kickban
-LEAVE=part
-M=msg
-MUB=unban *
-N=names
-Q=query
-SAY=msg *
-SIGNOFF=quit
-T=topic
-UB=unban
-W=who
-WC=part
-WI=whois
-WW=whowas
-
-[ignore]
-
-[server]
-server_name=oftc
-server_autoconnect=on
-server_autoreconnect=on
-server_autoreconnect_delay=30
-server_address=irc.oftc.net
-server_port=6667
-server_ipv6=off
-server_ssl=off
-server_password=
-server_nick1=Web-sidux
-server_nick2=Web-sidux1
-server_nick3=Web-sidux3
-server_username=sidux user
-server_realname=sidux user
-server_command=
-server_command_delay=0
-server_autojoin=sidux
-server_autorejoin=on
-server_notify_levels=
